--- a/package.json
+++ b/package.json
@@ -12,14 +12,27 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.14",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "animate.css": "^3.7.2",
+    "bootstrap": "^4.4.1",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "jw-paginate": "^1.0.4",
+    "ngx-bootstrap": "^5.2.0",
+    "ngx-bootstrap-modal": "^2.0.1",
+    "ngx-order-pipe": "^2.0.4",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.3",
+    "sweetalert2": "^9.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
@@ -28,9 +41,9 @@
     "@angular/cli": "~8.3.20",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^8.9.5",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
